<resources>
    <string name="app_name">GMonita</string>
    <string name="temperature1">Temperature</string>
    <string name="density">Density</string>
    <string name="humidity1">Humidity</string>
    <string name="temperature2">Temperature</string>
    <string name="wait">Wait</string>
    <string name="humidity2">Humidity</string>
    <string name="na1">NA</string>
    <string name="na2">NA</string>
    <string name="na3">NA</string>
    <string name="air_quality">Air Quality</string>
    <string name="na4">NA</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="please_wait">Please wait</string>
    <string name="humidity">Humidity</string>
    <string name="working">Please wait</string>
    <string name="todo">TODO</string>
    <string name="temp_na">N/A</string>
    <string name="humidity_sensor_name">Humidity</string>
    <string name="todo_hum">TODO</string>
    <string name="hum_na">N/A</string>
    <string name="light_display_name">Light</string>
    <string name="todo_light">TODO</string>
    <string name="light_na">N/A</string>
    <string name="soil_moisture_display_name">Moisture</string>
    <string name="todo_soil">TODO</string>
    <string name="soil_moisture_na">N/A</string>
    <string name="camera_name">Camera</string>
    <string name="camera_na">N/A</string>
    <string name="enter_server_url">Enter Server URI</string>
    <string name="enter_client_id">Enter Client ID</string>
    <string name="enter_username">Enter Username</string>
    <string name="connect">Connect</string>
    <string name="refresh">Refresh</string>
    <string name="xx">XX%</string>
    <string name="yy_c">YY_C</string>
    <string name="xx_">XX</string>
    <string name="all_sensors">Sensors</string>
    <string name="working_wait">Working Wait</string>
    <string name="no_connected">No connected</string>
    <string name="sensor_readings">Sensor Readings</string>
    <string name="title_activity_actuator">Actuator</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_password">Enter Password</string>
    <string name="_30">30%</string>
    <string name="_503_8_lux">503.8 lux</string>
    <string name="login_me">Login</string>
    <string name="actuator">Actuator</string>
    <string name="actuator_control">Actuator Control</string>
    <string name="temperature_act">Fan</string>
    <string name="humidty_act">Exhaust</string>
    <string name="light_act">Lamp</string>
    <string name="soil_moisture_act">Water Supply</string>
    <string name="welcome">Welcome</string>
    <string name="on_switch">On</string>
    <string name="off_switch">Off</string>
</resources>